# rust-sandbox

./: .gitignore  404.html  Cargo.toml  index.html  local_rest.rest
docs/: index.html
migrations/2021-04-05-050316_create_posts/: up.sql
migrations/2021-04-05-051747_create_choices/: up.sql
src/: main.rs  schema.rs
