[package]
name = "rust"
version = "0.1.0"
authors = ["Jun Gao <junworks7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2"
futures = "0.3"
r2d2_postgres = "^0.18"
diesel = { version = "1", features = ["postgres"] }
dotenv = "0"
serde = "1"
chrono = { version = "0", features = ["serde"] }
r2d2 = "0"
actix-files = "0.5"
env_logger = "0.8"
